--- a/jbi9_unwosu6.html
+++ b/jbi9_unwosu6.html
@@ -52,7 +52,7 @@
 
 	<!-- (5/6) -->
 	<h2> How many countries from each contient have a [DIRECTION: LOWER/HIGHER] life satisfaction than [COUNTRY] in [YEAR]? (Visual)</h2>
-	<form action="<?php $_SERVER['PHP_SELF']?>" method="post">
+	<form action="Q56.php" method="post">
 		DIRECTION:
 		<select name="direction">  
 			<option value="">--- choose a direction ---</option>}
