--- a/jbi9_unwosu6.html
+++ b/jbi9_unwosu6.html
@@ -133,9 +133,8 @@
 	<br/><br/>
 
 	<!-- (10) -->
-	<h2> In [YEAR] what was the average [FACTOR] of the countries with a life satisfaction above [NUMBER]?</h2>
+	<h2> What was the average [FACTOR] of the countries with a life satisfaction above [NUMBER]?</h2>
 	<form action="Q10.php" method="post">
-		YEAR: <input type="text" name="year"> <br/>
 		FACTOR:
 		<select name="factor">  
 			<option value="">--- choose a factor ---</option>}
