Q12-new partially working

--- a/jbi9_unwosu6.html
+++ b/jbi9_unwosu6.html
@@ -192,7 +192,8 @@
 			<option value="South America">South America</option>  
 			<option value="Europe">Europe</option>  
 			<option value="Oceania">Oceania</option>  
-		</select>
+		</select><br>
+		<input type="submit">
 	</form>
 	<br/><br/>
 
