--- a/jbi9_unwosu6.html
+++ b/jbi9_unwosu6.html
@@ -42,9 +42,10 @@
 	<br/><br/>
 
 	<!-- (4) -->
-	<h2> What is the average number of days of paid leave for countries with a life satisfaction above [LOWER LIMIT] and below [UPPER LIMIT]?</h2>
+	<h2> In [YEAR], what is the average number of days of paid leave for countries with a life satisfaction above [LOWER LIMIT] and below [UPPER LIMIT]?</h2>
 	<h3> (Life satisfaction is measured on a scale from 0 to 10)</h3>
 	<form action="Q4.php" method="post">
+		YEAR: <input type="text" name="year"> <br/>
 		LOWER LIMIT: <input type="text" name="lower"> <br/>
 		UPPER LIMIT: <input type="text" name="upper"> <br/>
 		<input type="submit">
