--- a/jbi9_unwosu6.html
+++ b/jbi9_unwosu6.html
@@ -4,7 +4,7 @@
     <body>
         <h1>Welcome to our page :) Would you like to see our project?</h1>
         <form action="jbi9_unwosu6.php" method="post">
-            <input type="show me!">
+            <input type="submit" value="show me!">
         </form>
     </body>
 </html>
