Updated main page

--- a/phase_e_sub/public_html/jbi9_unwosu6.html
+++ b/phase_e_sub/public_html/jbi9_unwosu6.html
@@ -2,7 +2,9 @@
 
 <html>
     <body>
-        <h1>Welcome to our page :) Would you like to see our project?</h1>
+        <h1>SP22 Databases Project</h1>
+        
+        <p> The 40-hour workweek is a staple in American society as most Americans work 40+ hours each week. That amounts to 35% of waking hours for a lifetime. We would like to analyze how working hours relate to levels of happiness as well as see how America compares globally.. We would also like to analyze the differences between different sectors of work globally and see how the overall life satisfaction and other benefits (ie vacation time, paid leave) of a company impact individuals. </p>
         <form action="jbi9_unwosu6.php" method="post">
             <input type="submit" value="show me!">
         </form>
